--- a/terraform/cloud-init/fortigate.conf
+++ b/terraform/cloud-init/fortigate.conf
@@ -28,7 +28,7 @@ config system ntp
     set type custom
     config ntpserver
         edit 1
-            set server "0.ca.pool.ntp.org"
+            set server "0.ca.pool.ntp1.org"
         next
         edit 2
             set server "1.ca.pool.ntp.org"
